# karnak

./: .dockerignore  API.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pom.xml  setup_deid_gateway.py
.github/: SECURITY.md  dependabot.yml
.github/workflows/: build-installer.yml  docker-publish.yml  maven.yml  sonar.yml
build-portable/: package.sh  run.bat  run.cfg  run.sh
build-portable/resources/linux/: copyright
docs/: automatic-pixel-deidentification.md  conformance-report-developer-guide.md  conformance-report-user-guide.md
python-client/: .gitignore  README.md  pyproject.toml
python-client/karnak_api_client/: __init__.py  apply.py  client.py
python-client/tests/: test_apply.py  test_client.py
src/main/docker/: Dockerfile
src/main/frontend/: index.html
src/main/frontend/components/: yaml-code-editor.ts
src/main/frontend/themes/common-theme/: lumo-compat.css  styles.css
src/main/frontend/themes/common-theme/components/: vcf-date-range-month-calendar.css  vcf-date-range-picker-overlay-content.css  vcf-date-range-picker-overlay.css  vcf-date-range-picker-text-field.css  vcf-date-range-picker.css
src/main/java/org/karnak/frontend/: AppShellConfig.java  MainLayout.java  Menu.java
src/main/resources/: application.yml  deidentification-api.yaml  openapi.yaml  vaadin-featureflags.properties
src/main/resources/db/changelog/changes/: db.changelog-2.1.xml  db.changelog-2.2.xml  (+3 more)
src/main/resources/templates/: conformanceReportEmail.html  transferNotificationEmail.html
src/main/resources/templates/fragments/: conformanceBadges.html
(+201 files in other folders)
