[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karnak-api-client"
version = "0.1.0"
description = "Python client for the Karnak REST API (karnak-endpoints fork): transport client plus idempotent desired-state apply for profiles, projects, forward nodes, destinations and auth configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["karnak_api_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
